Attempting to fix continue btn on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,6 @@
     font-family: 'Lato', sans-serif;
 }
 
-html, body {
-    overflow: hidden;
-}
-
 .result-card {
     display: flex;
     flex-direction: column;
